--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,37 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
+  google_maps_flutter: ^2.5.0
+  flutter_polyline_points: ^2.1.0
+  geolocator: ^7.0.2
+  geocoding: ^2.0.0
+  flutter_screenutil: ^5.9.0
+  google_fonts: ^6.1.0
+  get: ^4.6.6
+  flutter_vector_icons: ^2.0.0
+  cached_network_image: ^3.3.0
+  flutter_rating_bar: ^4.0.1
+  flutter_hooks: ^0.20.3
+  http: ^1.1.0
+  shimmer: ^3.0.0
+  glass: ^1.0.2+1
+  flutter_svg: ^2.0.9
+  lottie: ^2.7.0
+  get_storage: ^2.1.1
+  webview_flutter: ^4.4.2
+  webview_flutter_android: ^3.12.1
+  webview_flutter_wkwebview: ^3.9.4
+  device_preview: ^1.1.0
+  otp_text_field: ^1.1.3
+  firebase_auth: ^4.15.2
+  firebase_core: ^2.24.2
+  country_picker: ^2.0.23
+
+
+  #CV
+  provider: ^6.0.5
+  readmore: ^2.2.0
+  
 
 dev_dependencies:
   flutter_test:
@@ -58,10 +89,11 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
-  # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+
+  
+  assets:
+    - assets/images/
+
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
